# lifestream_task

./: .gitignore  CMakeLists.txt  README.md  driver.cpp  driver.h  fileprocessor.cpp  fileprocessor.h  main.cpp  message.h  transport.cpp  transport.h
client/: CMakeLists.txt  README.md  driver.cpp  driver.h  fileprocessor.cpp  fileprocessor.h  main.cpp  message.h  transport.cpp  transport.h
server/: CMakeLists.txt  README.md  driver.cpp  driver.h  fileprocessor.cpp  fileprocessor.h  main.cpp  message.h  server.cpp  server.h
